--- a/master-thesis-extended-reality.html
+++ b/master-thesis-extended-reality.html
@@ -28,7 +28,6 @@
 <body>
 
   <!-- ======= Navbar ======= -->
-
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">Portfolio.</a>
@@ -50,42 +49,48 @@
           </ul>
         </div>
       </div>
+
     </div>
   </div>
 
   <main id="main">
 
-    <!-- ======= Works Section ======= -->
-    <section class="section site-portfolio">
-      <div class="container">
-        <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Philip Johannesson</h2>
-            <p class="mb-0">Strategic media developer</p>
-          </div>
-          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".analysis">Analysis</a>
-              <a href="#" data-filter=".uiux">UI/UX</a>
-              <a href="#" data-filter=".visualmedia">Visualisation</a>
-              <a href="#" data-filter=".development">Development</a>
+    <section class="section">
+
+    <div class="container">
+      <div class="row mb-4 align-items-center">
+        <div class="col-md-6" data-aos="fade-up">
+          <h2>The early stages for extended reality</h2>
+        </div>
+      </div>
+    </div>
+
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-stretch">
+            <div class="col-md-8" data-aos="fade-up">
+              <img src="assets/img/XR.png" alt="Image" class="img-fluid">
+            </div>
+            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <div class="sticky-content">
+                <h3 class="h3">ME664E Master's thesis in Strategic Media Development</h3>
+                <p class="mb-4"><span class="text-muted">Analysis</span></p>
+
+                <div class="mb-5">
+                  <p>An analysis of the opportunities and challenges faced by early stage businesses within the extended reality (XR) industry. </p>
+                </div>
+
+                <h4 class="h4 mb-3">Tools I used</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>??</li>
+                </ul>
+
+                <p><a href="assets/files/master-thesis-extended-reality.pdf" class="readmore" target="_blank">Download thesis</a></p>
+              </div>
             </div>
           </div>
         </div>
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item analysis col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="master-thesis-extended-reality.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Extended reality/h3>
-                <span>Analysis</span>
-              </div>
-              <img class="img-fluid" src="assets/img/XR.png">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section><!-- End  Works Section -->
+    </section>
 
   </main><!-- End #main -->
 
@@ -98,7 +103,7 @@
         </div>
         <div class="col-sm-6 social text-md-end">
           <a href="https://github.com/philipjohannesson"><span class="icofont-github"></span></a>
-          <a href="https://www.linkedin.com/in/philip-johannesson"><span class="icofont-linkedin"></span></a>
+          <a href="https://www.linkedin.com/in/philip-johannesson/"><span class="icofont-linkedin"></span></a>
         </div>
       </div>
     </div>
