--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="item analysis col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="master-thesis-extended-reality.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Extended reality/h3>
+                <h3>Extended reality</h3>
                 <span>Analysis</span>
               </div>
               <img class="img-fluid" src="assets/img/XR.png">
