--- a/about.html
+++ b/about.html
@@ -87,7 +87,8 @@
               <span class="la la-desktop la-3x mp-4"></span>
               <div class="media-body">
               <h4 class="h4 mb-2">Development</h4>
-              <p>CSS, HTML</p>
+              <p>CSS</p>
+              <p>HTML</p>
               </div>
             </div>
             </div>
@@ -96,8 +97,9 @@
               <div class="media templateux-media mp-4">
               <span class="la la-code-fork la-3x mp-4"></span>
               <div class="media-body">
-              <h4 class="h4 mb-2">XX</h4>
-              <p>XX</p>
+              <h4 class="h4 mb-2">Visualisation</h4>
+              <p>Aframe</p>
+              <p>Gephi</p>
               </div>
               </div>
             </div>
@@ -121,7 +123,9 @@
               <span class="la la-image la-3x mp-4"></span>
               <div class="media-body">
               <h4 class="h4 mb-2">Visual Media</h4>
-              <p>XX</p>
+                <p>Illustrator</p>
+                <p>InDesign</p>
+                <p>Photoshop</p>
               </div>
               </div>
             </div>
