--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
               <span class="la la-desktop la-3x mp-4"></span>
               <div class="media-body">
               <h4 class="h4 mb-2">Development</h4>
-              <p>CSS</p>
-              <p>HTML</p>
+              <p>CSS, HTML</p>
               </div>
             </div>
             </div>
@@ -98,8 +97,7 @@
               <span class="la la-code-fork la-3x mp-4"></span>
               <div class="media-body">
               <h4 class="h4 mb-2">Visualisation</h4>
-              <p>Aframe</p>
-              <p>Gephi</p>
+              <p>Aframe, Gephi</p>
               </div>
               </div>
             </div>
@@ -123,9 +121,7 @@
               <span class="la la-image la-3x mp-4"></span>
               <div class="media-body">
               <h4 class="h4 mb-2">Visual Media</h4>
-                <p>Illustrator</p>
-                <p>InDesign</p>
-                <p>Photoshop</p>
+                <p>Illustrator, InDesign, Photoshop</p>
               </div>
               </div>
             </div>
