--- a/about.html
+++ b/about.html
@@ -96,8 +96,8 @@
               <div class="media templateux-media mp-4">
               <span class="la la-code-fork la-3x mp-4"></span>
               <div class="media-body">
-              <h4 class="h4 mb-2">Visualisation</h4>
-              <p>Aframe, Gephi</p>
+              <h4 class="h4 mb-2">Data Visualisation</h4>
+              <p>Aframe, Gephi, Tableau</p>
               </div>
               </div>
             </div>
